[package]
name = "radio_datetime_utils"
version = "0.4.0"
edition = "2021"
authors = [ "René Ladan <rene0+github@freedom.nl>" ]
description = "Utilities and definitions for date/time structures for time station decoders."
repository = "https://github.com/rene0/radio_datetime_utils"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

